# Cross-seed-rs

./: .gitignore  .gitmodules  Cargo.toml  dockerfile
src/: cross_seed.rs  indexer.rs  main.rs  util.rs
src/config/: cli_provider.rs  config.rs  mod.rs
src/config/client/: qbittorrent.rs
src/torrent_client/: mod.rs
src/torznab/: client.rs  error.rs  search_parameters.rs  torrent_result.rs
