[package]
name = "cross-seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
futures = { version = "0.3.21", features= ["executor"] }
toml = "0.5.9"
lava_torrent = "0.7.0" # https://docs.rs/lava_torrent/0.7.0/lava_torrent/
torznab = "0.7.2" # https://docs.rs/torznab/0.7.2/torznab/

stopwatch = "0.0.7"

magnet-url = { git = "https://github.com/SeanOMik/magnet-url-rs.git", branch = "main" }
abstracttorrent = { path = "abstracttorrent" }
#abstracttorrent = { git = "https://github.com/SeanOMik/abstracttorrent.git", branch = "main" }
#qbittorrent = { git = "https://github.com/SeanOMik/qbittorrent-rs.git", branch = "main"}

serde_with = "1.14.0"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
wild = "2.0.4"
argmap = "1.1.2"
async-recursion = "1.0.0"

reqwest = {version = "0.11", default_features = false, features = ["gzip", "json", "rustls-tls"]}
urlencoding = "2.1.0"

# Torznab stuff
rss = "2.0.1"
bytes = "1.1.0"
quick-xml = {version = "0.23.0", features = ["serialize"]}